# kuka-lwr

kuka_lwr/: package.xml
lwr_controllers/: CMakeLists.txt~  package.xml~
lwr_controllers/config/: controllers.yaml  controllers_utils.launch  lwr_controllers.yaml
lwr_controllers/launch/: load_controller.launch~
lwr_controllers/src/: adding_obstacles_kuka.py  adding_obstacles_kuka.py~  cartesian_control_kuka.py  cartesian_control_kuka.py~  moveit_fk_lwr.py  moveit_fk_lwr.py~  moveit_ik_lwr.py
lwr_description/: package.xml
lwr_description/gazebo/: kuka_lwr.gazebo.xacro
lwr_description/launch/: kukalwr_display.launch
lwr_description/urdf/: kuka_lwr.transmission.xacro  kuka_lwr.urdf  kuka_lwr.urdf.xacro  kuka_lwr.xacro  kuka_materials.xacro
lwr_gazebokuka/lwr_gazebokuka/: CMakeLists.txt  package.xml  package.xml~
lwr_gazebokuka/lwr_launchkuka/: CMakeLists.txt  package.xml  package.xml~
lwr_gazebokuka/lwr_launchkuka/launch/: lwr_kukaworld.launch  lwr_launch4+.launch  rviz_config.rviz  rvizconfig.rviz
lwr_gazebokuka/lwr_robotworld/: CMakeLists.txt  package.xml
lwr_gazebokuka/lwr_robotworld/config/: 980241-FRI-Driver.init
lwr_hw/launch/: lwr_hw.launch
lwr_moveitkuka/: .setup_assistant  CMakeLists.txt  package.xml
lwr_moveitkuka/config/: fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  kuka_lwr.srdf  lwrcontrollers.yaml  ompl_planning.yaml
lwr_moveitkuka/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  (+12 more)
lwr_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
