<package format="2">
  <name>lwr_launchkuka</name>
  <version>0.1.0</version>
  <description>The lwr_launchkuka package to control everything that needs to launched.</description>

  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lwr_robotworld</exec_depend>
  <exec_depend>lwr_moveitkuka</exec_depend>

  <export>
  </export>
</package>
